Tag ordering, all tags page

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/ba_paginated_favourite_list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/ba_paginated_favourite_list.html
@@ -36,4 +36,5 @@
     </tbody>
   </table>
 {% include "aristotle_mdr/helpers/list_action_bar.html" with wrap=True %}
+{% include "aristotle_mdr/helpers/paginator.html" with page=page %}
 </form>
