Fix tag ordering, add back button

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/tags.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/tags.html
@@ -22,4 +22,7 @@
   {% if page_obj %}
     {% include 'aristotle_mdr/favourites/ba_paginated_favourite_list.html' with page_obj=page_obj tags_list=False %}
   {% endif %}
+  <a class="btn btn-default margin-above" href="{% url 'aristotle_favourites:favs_and_tags' %}">
+    Back
+  </a>
 {% endblock %}
