--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userFavourites.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userFavourites.html
@@ -30,11 +30,11 @@
       <li><a href="{% url 'aristotle_favourites:all_tags' %}">View all tags</a></li>
     </ul>
     <p>
-        Below is a list of all your favourited items, you will recieve notifications
+        Below is a list of all your favourited or tagged items, you will recieve notifications
         when any of these items are edit, if their registration status changes or if they are made public.
     </p>
     <p>
-        Use your favourites list to keep track of important items to know when they change.
+        Use your favourites and tags to keep track of important items to know when they change.
         <strong><a href="?help=help">Get help on using your favourites list</a></strong>
     </p>
         {% if not help %}
