--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/infobox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/infobox.html
@@ -144,7 +144,7 @@
           {% verbatim %}
           <div class="vue-tags" v-cloak>
             <hr>
-            <dt>Tags</dt>
+            <dt>Your Tags</dt>
             <dd>
               <ul class="taggle_list">
                 <li class="taggle" v-for="tag in saved_tags">{{ tag }}</li>
