--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/generic/templates/aristotle_mdr/generic/actions/alter_one_to_many_formset.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/generic/templates/aristotle_mdr/generic/actions/alter_one_to_many_formset.html
@@ -13,7 +13,11 @@
 <tbody id="{{ formset.prefix }}" class="draggableTable">
 {% for form in formset.forms %}
   <tr class="moveablerow">
+      {% if formset.is_ordered %}
       <td title="Drag to reorder"><i class="fa fa-bars grabber"></i>
+      {% else %}
+      <td title=""><i class="fa"></i>
+      {% endif %}
           {% for hidden in form.hidden_fields %}
           {{ hidden }}
           {% endfor %}
