--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
@@ -27,6 +27,10 @@
   <script src="{% static 'aristotle_mdr/aristotle.notify.js' %}" type="text/javascript"></script>
 {% endif %}
 
+{% if vue %}
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.min.js"></script>
+{% endif %}
+
 {% block extra_alwayson_scripts %}
 {% endblock %}
 
