--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/base.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/base.html
@@ -35,8 +35,8 @@
    {% block header %}
     {% include 'aristotle_mdr/header.html' %}
    {% endblock %}
-   <div id="messages-row" class="row" {% if not messages %}hidden{% endif %}>
-        <div class="alert alert-info" role="alert">
+   <div id="messages-row" class="row">
+        <div class="alert alert-info" role="alert" {% if not messages %}hidden{% endif %}>
         <button type="button" class="close"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             <ul class="messages text-center">
                 {% for message in messages %}
@@ -44,7 +44,12 @@
                 {% endfor %}
             </ul>
         </div>
-        </div>
+        <noscript>
+          <div class="alert alert-warning text-center" role="alert">
+            You appear to be viewing the site without Javascript. Some functionality may not work as expected
+          </div>
+        </noscript>
+   </div>
    <div id='content' class="container">
         {% block content %}
         {% endblock %}
