--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/userFavourites.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/userFavourites.html
@@ -39,7 +39,7 @@
     </p>
         {% if not help %}
             {% if page_obj %}
-            {% include 'aristotle_mdr/favourites/ba_paginated_favourite_items.html' with page_obj=page_obj %}
+            {% include 'aristotle_mdr/favourites/ba_paginated_favourite_items.html' with page_obj=page_obj tags_list=True %}
             {% else %}
                 <strong>You currently have no favourited items.</strong>
             {% endif %}
