--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/tags.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/tags.html
@@ -30,7 +30,7 @@
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </noscript>
-  <div id="vue-managed-content">
+  <div id="vue-container">
     <switch-edit 
       name="description" 
       initial="{{ tag.description }}" 
