--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/ba_paginated_favourite_items.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/ba_paginated_favourite_items.html
@@ -19,7 +19,17 @@
       {% for item in page_obj %}
       <tr>
         <td><input type="checkbox" id="id_items_{{ item.id }}" name="items" value="{{ item.id }}"></td>
-        <td><i class="fa fa-bookmark{% if item.item_favourite < 1 %}-o{% endif %}"></i></td>
+        <td><i 
+            {% if all_favourite %}
+            class="fa fa-bookmark"
+            {% elif item.item_favourite %}
+            class="fa fa-bookmark{% if item.item_favourite < 1 %}-o{% endif %}"
+            {% else %}
+            class="fa fa-bookmark-o"
+            {% endif %}
+            >
+          </i>
+        </td>
         <td><a href="{% url 'aristotle_mdr:item' item.id %}">{{ item.name }}</a></td>
         <td>{{ item.definition }}</td>
         {% if tags_list %}
