--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/favourite_concept.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/favourite_concept.html
@@ -1,12 +1,15 @@
 {% load aristotle_tags i18n %}
-<a class="btn btn-default favourite" href="{% url 'aristotle_favourites:toggleFavourite' item.id %}"
-   title="{% ternary isFavourite 'Remove from my favourite items' 'Add to my favourite items' %}">
-    {% if isFavourite %}
-        <i class="fa fa-bookmark "></i>
-    {% else %}
-        <i class="fa fa-bookmark-o "></i>
-    {% endif %}
-</a>
+<noscript>
+  <a class="btn btn-default favourite" href="{% url 'aristotle_favourites:toggleFavourite' item.id %}"
+    title="{% ternary isFavourite 'Remove from my favourite items' 'Add to my favourite items' %}">
+      {% if isFavourite %}
+          <i class="fa fa-bookmark "></i>
+      {% else %}
+          <i class="fa fa-bookmark-o "></i>
+      {% endif %}
+  </a>
+</noscript>
+<favourite initial="{{ isFavourite }}" submit-url="{% url 'aristotle_favourites:toggleFavourite' item.id %}" v-cloak></favourite>
 <a class="btn btn-default" data-toggle="modal" data-target="#TagEditorModal" v-cloak>
   <i class="fa fa-tag" aria-hidden="true"></i>
   Tag
