--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
@@ -87,9 +87,8 @@
             <div class="modal-body">
               <p>Update your tags for this item, new tags (shown darker) will be created for you</p>
 
-              <vue-simple-suggest :list="getSuggestions" :filter-by-query="true" @select="makeSuggestion">
-                <taggle-tags :tags="current_tags" :newtags="newTags" @tag-update="update_tags"></taggle-tags>
-              </vue-simple-suggest>
+              <autocomplete-tags :current_tags="current_tags" :user_tags="user_tags" @tag-update="update_tags"></autocomplete-tags>
+
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
