Missing closing bracket

--- a/python/aristotle-metadata-registry/aristotle_mdr/static/aristotle_mdr/aristotle.less
+++ b/python/aristotle-metadata-registry/aristotle_mdr/static/aristotle_mdr/aristotle.less
@@ -281,6 +281,7 @@ li.viewHistory {
     list-style-type:none;
     margin-left:-15px;
 }
+
 #infobox {
     > header {
         font-size:110%;
@@ -528,6 +529,7 @@ background: repeating-linear-gradient(
 
 [v-cloak] {
   display: none
+}
 
 .margin-left{
   margin-left: 10px;
