fix favourites template linking

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/header.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/header.html
@@ -68,9 +68,9 @@
                     <li><a href="{% url 'aristotle:userHome' %}">
                         <i class="fa fa-home fa-fw"></i> {% trans 'My Dashboard'%}
                     </a></li>
-                    <li><a href="{% url 'aristotle:userFavourites' %}">
-                        <i class="fa fa-bookmark fa-fw"></i> {% trans 'My Favourites'%}
-                        <span class="badge">{{ user.profile.favourites.count }}</span>
+                    <li><a href="{% url 'aristotle_favourites:favs_and_tags' %}">
+                        <i class="fa fa-bookmark fa-fw"></i> {% trans 'Favourites and Tags'%}
+                        <span class="badge">{{ user.profile.favs_and_tags_count }}</span>
                     </a></li>
                     <li><a href="{% url 'aristotle:userInbox' %}">
                         <i class="fa fa-envelope fa-fw"></i> {% trans 'Notifications'%}
