--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userHome.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userHome.html
@@ -54,7 +54,7 @@
                 <div class="panel-heading">
                     <i class="fa fa-bookmark fa-fw"></i>
                     <span class="panel-title">Recent Favourites</span>
-                    <a href="{% url 'aristotle:userFavourites' %}">See more</a>
+                    <a href="{% url 'aristotle_favourites:favs' %}">See more</a>
                 </div>
 
                 <div class="list-group">
