--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userHome.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userHome.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="list-group">
-                    {% for item in user.profile.favourites.all|slice:':5' %}
+                    {% for item in user.profile.favourites|slice:':5' %}
                       <a class="list-group-item" href="{{ item.get_absolute_url }}">
                         {{ item }}
                         <small>({{ item.item.get_verbose_name }})</small>
