--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
@@ -4,20 +4,20 @@
 <!--[if lt IE 9]>
   <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
 <![endif]-->
-<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+
+{# Webpack bundle #}
+<script src="{% static 'bundles/base.js' %}"></script>
 
 {{ form.media }}
 {{ formset.media }}
 
 <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/bootstrap/css/bootstrap.min.css' %}" />
-<script src="{% static 'aristotle_mdr/bootstrap/js/bootstrap.min.js' %}" type="text/javascript"></script>
 
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/aristotle.less'|compile %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/aristotle.visuals.less'|compile %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/bootstrap.wcag.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/pink.wcag.css' %}" />
-<script src="{% static 'aristotle_mdr/aristotle.js' %}" type="text/javascript"></script>
 
 <link rel="stylesheet" type="text/css" href="{% static 'bootstrap3_datetime/bootstrap-datetimepicker.min.css' %}" />
 <script src="{% static 'bootstrap3_datetime/moment.min.js' %}" type="text/javascript"></script>
