Added notify lib package, removed old scripts

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/base.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/base.html
@@ -53,6 +53,10 @@
     </div>
     {% include 'aristotle_mdr/footer.html' %}
     <div class="well hidden" id="loading_indicator"><i class="fa fa-spinner fa-spin"></i> {% trans 'Loading' %}</div>
+
+    {% block webpack_bundle %}
+      <script src="{% static 'bundles/base.js' %}"></script>
+    {% endblock %}
    </body>
 </html>
 
