--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/search/search.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/search/search.html
@@ -7,12 +7,15 @@
 {% load compile_static %}
 
 {% block extra_head_scripts %}
-    <script src="{% static 'aristotle_mdr/aristotle.search.js' %}" type="text/javascript"></script>
     <!--[if !IE]> -->
     <link rel="stylesheet" href="{% static 'aristotle_mdr/aristotle_search.less'|compile %}" />
     <![endif]-->
     <!--[if lt IE 9]>
     <![endif]-->
+{% endblock %}
+
+{% block webpack_bundle %}
+  <script src="{% static 'bundles/search.js' %}"></script>
 {% endblock %}
 
 {% block header %}
