Split chunk optimisation

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/base.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/base.html
@@ -56,7 +56,11 @@
     </div>
     {% include 'aristotle_mdr/footer.html' %}
     <div class="well hidden" id="loading_indicator"><i class="fa fa-spinner fa-spin"></i> {% trans 'Loading' %}</div>
+    
+    {# Webpack split chunk #}
+    <script src="{% static 'bundles/vendors.js' %}"></script>
 
+    {# Webpack bundle #}
     {% block webpack_bundle %}
       <script src="{% static 'bundles/base.js' %}"></script>
     {% endblock %}
