--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
@@ -19,7 +19,7 @@
 
 
 {% if vue %}
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.min.js"></script>
+  {# <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.min.js"></script> #}
 {% endif %}
 
 {% block extra_alwayson_scripts %}
