Init datetimepickers through webpack

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/search/forms/widgets/datetime.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/search/forms/widgets/datetime.html
@@ -5,9 +5,11 @@
   </span>
 </div>
 {% if picker_id %}
+{% comment %}
 <script>
   $(function(){
     $("#{{picker_id}}:has(input:not([readonly],[disabled]))").datetimepicker({{options|safe}});
   });
 </script>
+{% endcomment %}
 {% endif %}
