--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/advanced_editor.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/advanced_editor.html
@@ -1,5 +1,6 @@
 {% extends request.is_ajax|yesno:"aristotle_mdr/base_ajax.html,aristotle_mdr/base.html" %}
 {% load compile_static i18n %}
+{% load aristotle_tags %}
 {% load static from staticfiles %}
 
 {% block title %}Editing {{ item.name }}{% endblock %}
