--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/changeStatus.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/changeStatus.html
@@ -24,6 +24,10 @@
 {{ block.super }}
 {% endblock %}
 
+{% block webpack_bundle %}
+  <script src="{% static 'bundles/changeStatus.js' %}"></script>
+{% endblock %}
+
 {% block form_tag %}
 <form method="post" action="{% url 'aristotle_mdr:changeStatus' item.id %}">
 {% endblock %}
