--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/request_review.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/request_review.html
@@ -5,6 +5,10 @@
 
 {% block title %}Request review for {{ item.name }}{% endblock %}
 
+{% block webpack_bundle %}
+  <script src="{% static 'bundles/changeStatus.js' %}"></script>
+{% endblock %}
+
 {% block content %}
 <form method="post" action="{% url 'aristotle:request_review' item.id %}">{% csrf_token %}
     <div class="modal-body">
