Moved tagPage and all tag page to webpack bundles

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/all_tags.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/all_tags.html
@@ -48,5 +48,8 @@
       @no="deleteCancelled">
     </yesno-modal>
   </div>
-  <script src="{% static 'aristotle_favourites/vue/allTags.js' %}"></script>
+{% endblock %}
+
+{% block webpack_bundle %}
+  <script src="{% static 'bundles/allTags.js' %}"></script>
 {% endblock %}
