--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/tags.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/tags.html
@@ -44,5 +44,8 @@
   <a class="btn btn-default margin-above" href="{% url 'aristotle_favourites:favs_and_tags' %}">
     Back
   </a>
-  <script src="{% static 'aristotle_favourites/vue/tagPage.js' %}"></script>
+{% endblock %}
+
+{% block webpack_bundle %}
+  <script src="{% static 'bundles/tagPage.js' %}"></script>
 {% endblock %}
