--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
@@ -2,12 +2,14 @@
 {% load i18n static %}
 
 {% block individual_scripts %}
-<script src="{% static 'aristotle_mdr/sandbox.js' %}"></script>
 <script src="{% static 'aristotle_mdr/ajaxforms.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.0/dist/clipboard.min.js"></script>
 <script>
     delete_submit_url="{% url 'aristotle_mdr:sandbox_delete' %}";
 </script>
+{% endblock %}
+
+{% block webpack_bundle %}
+  <script src="{% static 'bundles/sandbox.js' %}"></script>
 {% endblock %}
 
 {% block page %}
