--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
@@ -9,7 +9,7 @@
 {{ form.media }}
 {{ formset.media }}
 
-<link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/bootstrap/css/bootstrap.min.css' %}" />
+{# <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/bootstrap/css/bootstrap.min.css' %}" /> #}
 
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/aristotle.less'|compile %}" />
