--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
@@ -12,7 +12,7 @@
 {# <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/bootstrap/css/bootstrap.min.css' %}" /> #}
 
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-<link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/aristotle.less'|compile %}" />
+{# <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/aristotle.less'|compile %}" /> #}
 <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/aristotle.visuals.less'|compile %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/bootstrap.wcag.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/pink.wcag.css' %}" />
